# shiba-memory

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW_AND_MARKET_ANALYSIS.md  README.md  docker-compose.yml
.claude/: settings.local.json
benchmarks/: cleanup_benchmark.sql  diagnose_retrieval.py  pyproject.toml  run_benchmarks.sh  run_halumem.py  run_locomo.py  run_longmemeval.py  run_longmemeval_debug.py  run_longmemeval_judge.py  shiba_adapter.py  shiba_gateway_adapter.py
cli/: Dockerfile  package-lock.json  package.json  tsconfig.json
cli/src/: db.ts  embeddings.ts  index.ts  llm.ts
dashboard/: package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: ActivityFeed.tsx  BrainGraph.tsx  NodeDetail.tsx  StatsPanel.tsx
dashboard/lib/: api.ts
plugins/hermes/: README.md  __init__.py  memory_provider.py  plugin.yaml
schema/: 001_init.sql  002_profiles_scoping.sql  003_instincts_tracking_gateway.sql  004_temporal_scoring.sql  005_migrations.sql  006_access_timestamps.sql  007_actr_proper.sql  008_fix_autolink.sql  009_extraction_log.sql  010_temporal_metadata.sql  011_multi_user_agent.sql  012_webhook_config.sql  013_hardening_and_features.sql  014_rrf_recall.sql  015_conflict_state.sql  016_scratchpad.sql  017_embed_1024.sql  018_improved_recall.sql  019_rrf_fix_and_benchmark.sql
scripts/: setup.sh
sdks/python/: setup.py  (+1 more)
skills/: forget.md  ingest.md  jarvis.md  recall.md  reflect.md  remember.md
tools/: embed_server.py  export_claude_conversations.js  import_claude_to_shiba.py  reextract_facts.py
(+51 files in other folders)
