[project]
name = "shiba-benchmarks"
version = "0.1.0"
description = "Benchmark adapter for Shiba memory system"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
bench = [
    "mem-bench",
]
standalone = [
    "datasets>=2.19",
    "openai>=1.30",
]

[project.entry-points."mem_bench.adapters"]
shiba = "shiba_adapter:ShibaAdapter"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
